--- a/casset/model/Dockerfile
+++ b/casset/model/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Python image as the base image
-FROM python:3.8-slim
+FROM python:3.9-slim
 
 # Set the working directory
 WORKDIR /app
@@ -8,6 +8,7 @@ WORKDIR /app
 COPY requirements.txt .
 
 # Install the required Python packages
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 # Copy the rest of the application code into the container
