--- a/casset/model/Dockerfile
+++ b/casset/model/Dockerfile
@@ -1,7 +1,7 @@
-# Use the official Python image as the base image
+# Use the official Python image as the base image for the backend
 FROM python:3.10-slim AS backend
 
-# Set the working directory
+# Set the working directory for the backend
 WORKDIR /app
 
 # Copy the requirements file into the container
@@ -10,34 +10,40 @@ COPY requirements.txt .
 # Install the required Python packages
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# Copy the rest of the backend code into the container
+# Copy the backend source code into the container
 COPY . .
 
 # Build the frontend
 FROM node:14 AS frontend
 
+# Set the working directory for the frontend
 WORKDIR /app/casset
 
+# Copy package.json and package-lock.json into the container
 COPY casset/package.json casset/package-lock.json ./
 
+# Install Node.js dependencies
 RUN npm install
 
-COPY ../casset .
+# Copy the frontend source code into the container
+COPY casset/src ./src
 
+# Build the frontend
 RUN npm run build
 
 # Final stage: combining backend and frontend
 FROM python:3.10-slim
 
+# Set the working directory for the final image
 WORKDIR /app
 
-# Copy the backend code
+# Copy the backend code from the backend build stage
 COPY --from=backend /app /app
 
-# Copy the frontend build
+# Copy the frontend build from the frontend build stage
 COPY --from=frontend /app/casset/build /app/static
 
-# Install the required Python packages
+# Install the required Python packages in the final image
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
 # Expose the port that your Flask app listens on
